<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin = "10dp"
    tools:context=".ShowActivity">

    <TextView
        android:id="@+id/txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="Student Details"
        android:textColor="@color/text"
        android:textSize="35dp"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:ems="10"
        android:hint="@string/sname"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/txt_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="20dp"
        android:hint="@string/sadrs"
        android:layout_marginTop="15dp"
        android:gravity="start|top"/>

    <TextView
        android:id="@+id/txt_dob"
        android:hint="@string/sdob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="20dp"
        android:layout_marginTop="15dp" />

    <TextView
        android:id="@+id/txt_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/sphone"
        android:textSize="20dp"
        android:layout_marginTop="15dp" />

    <TextView
        android:id="@+id/txt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="20dp"
        android:hint="@string/semail"
        android:layout_marginTop="15dp" />

    <Button
        android:id="@+id/btn_back"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="GO BACK" />

</LinearLayout>